# ssn_project

./: Anchor.toml  README_SSN.md  package.json  ssn-start.sh
.devcontainer/: setup.sh
backend/: Dockerfile  README.md  docker-compose.yml  package.json  render.yaml
backend/prisma/: schema.prisma  seed.ts
backend/src/: index.ts
backend/src/idl/: ssn.json
backend/src/middleware/: errorHandler.ts
backend/src/routes/: ipfs.ts  papers.ts  profiles.ts  reviews.ts  stats.ts
backend/src/services/: indexer.ts  ipfs.ts
backend/src/utils/: logger.ts  prisma.ts
frontend/: README.md  next.config.js  package.json  tailwind.config.js  vercel.json
frontend/app/: layout.tsx  page.tsx
frontend/app/leaderboard/: page.tsx
frontend/app/papers/[id]/: page.tsx
frontend/app/profile/[wallet]/: page.tsx
frontend/app/publish/: page.tsx
frontend/components/layout/: Navbar.tsx  StatsBar.tsx
frontend/components/paper/: PaperCard.tsx  PaperFeed.tsx  SearchFilters.tsx
frontend/components/review/: ReviewForm.tsx
frontend/components/ui/: StarRating.tsx
frontend/components/wallet/: WalletProvider.tsx
frontend/hooks/: useAddReview.ts  useContribute.ts  useProgram.ts  usePublishPaper.ts  useReleaseFunds.ts
frontend/lib/: api.ts  utils.ts
frontend/styles/: globals.css
programs/ssn/: Cargo.toml  README.md
programs/ssn/src/: lib.rs
tests/: ssn.ts
