[package]
name = "ssn"
version = "0.1.0"
description = "Solana Science Network – decentralized peer review & funding"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ssn"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
